<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCardVehicle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:paddingStart="12dp"
    android:paddingTop="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="0dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCardVehicleData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtCardVehicleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Electric Bike" />

        <ImageView
            android:id="@+id/imgCardVehicleImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCardVehicleType"
            tools:srcCompat="@drawable/ic_orange_bike" />

        <TextView
            android:id="@+id/txtCardVehicleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgCardVehicleImage"
            app:layout_constraintTop_toTopOf="@+id/imgCardVehicleImage"
            tools:text="Electric Bike B1" />

        <TextView
            android:id="@+id/txtCardVehicleDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtCardVehicleName"
            app:layout_constraintTop_toBottomOf="@+id/txtCardVehicleName"
            tools:text="Fastest electric bike available for rental in this whole city!" />

        <TextView
            android:id="@+id/txtCardVehicleFuelLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtCardVehicleType"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="84%" />

        <TextView
            android:id="@+id/txtCardVehiclePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCardVehicleDescription"
            tools:text="5.32$ / min" />

        <TextView
            android:id="@+id/txtCardVehicleRides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/txtCardVehicleDescription"
            app:layout_constraintTop_toBottomOf="@+id/txtCardVehicleDescription"
            tools:text="Rides: 5"
            tools:visibility="visible" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/btnCardVehicleClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCardVehicleAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCardVehicleData">

        <Button
            android:id="@+id/btnCardVehicleGoToRentedVehicle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:text="@string/button_card_vehicle_go_to_rented_vehicle_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnCardVehicleRentVehicle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:text="@string/button_card_vehicle_rent_vehicle_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCardVehicleGoToRentedVehicle"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnCardVehicleEndRent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/button_card_vehicle_end_rent_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCardVehicleRentVehicle"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>